
[metadata]
name = experimaestro
version = 0.5.8
author = Benjamin Piwowarski
author-email = benjamin@piwowarski.fr
home-page = https://github.com/experimaestro/datamaestro
description = "Standardize dataset handling"
long-description = file: README.md, CHANGELOG.md
long-description-content-type = text/markdown
license = GPL-3
license_file = LICENSE
platform = any
keywords = experiment manager
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules



[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.5
packages = find:
test_suite = datamaestro.test
setup_requires =
    setuptools >=30.3.0
install_requires = file: requirements.txt




[options.extras_require]
test =
    tox

[mypy]
python_version = 3.7
warn_unused_ignores = True