
[metadata]
name = datamaestro
author = Benjamin Piwowarski
author-email = benjamin@piwowarski.fr
home-page = https://github.com/experimaestro/datamaestro
description = "Dataset management command line and API"
long-description = file: README.md, CHANGELOG.md
long-description-content-type = text/markdown
license = GPL-3
license_file = LICENSE
platform = any
keywords = dataset manager
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options.entry_points]
console_scripts =
    datamaestro = datamaestro.__main__:main
mkdocs.plugins =
    datamaestro = datamaestro.commands.site:DatasetGenerator

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
package_dir=
    =src
packages=find:
test_suite = datamaestro.test
setup_requires =
    setuptools >= 65.0.0
    setuptools_scm
    wheel

[options.packages.find]
where=src

[options.extras_require]
test =
    tox

[mypy]
python_version = 3.7
warn_unused_ignores = True
